# colabtool

./: .env  COMMIT_CHECKLIST.md  README.md  pyproject.toml  requirements.txt  run_snapshot_mode.py  scoring_priorities.yaml
.github/workflows/: ci.yml  debug-symbols.yml  debug_mexc_mapping.yml  gpt-snapshot.yml  snapshot.yml  test-offline-snapshoot.yml  test-snapshot.yml  test_cg_chart.yml  update_codemap.yml
docs/: CODE_MAP.md  GPT_SNAPSHOT.md
docs new/: config.md  context.md  data_sources.md  features.md  glossary.md  mapping.md  pipeline.md  scoring.md  spec.md
docs/prompts/: promt_code_health
notebooks/: Crypto-Scanner Main.ipynb  Grok-Krypto-Scanner Main.ipynb  crypto_scanner_main.ipynb  crypto_scanner_main_PIT (2).ipynb  crypto_scanner_main_PIT.ipynb  crypto_scanner_main_v14.5 (1).ipynb  crypto_scanner_main_v14.5.ipynb
notebooks/achive/: crypto_scanner_main_v14.4.ipynb
notebooks/archive/: crypto_scanner_main_local.ipynb  crypto_scanner_main_v14.5.1.ipynb  crypto_scanner_main_v14.5.ipynb
scripts/: debug_mexc_mapping.py  test_mexc_klines.py  update_codemap.py  upload_to_drive.py
snapshots/: 20251123_fullsnapshot.xlsx  cg_markets.csv  mexc_pairs.csv
snapshots/20251112/: dummy_snapshot.csv
snapshots/20251118/: 20251118_snapshot.xlsx  cg_categories.csv  mexc_pairs.csv  seed_alias.csv
snapshots/20251123/: 20251123_fullsnapshot.xlsx  cg_chart_beldex_usd_200_daily.json  cg_markets.csv  (+3 more)
tests/: test_cg_chart_single.py  test_imports.py  test_moch_snapshot.py  test_mock_snapshot.py  test_pit_snapshot.py  test_run_snapshot_mode.py  test_scoring_pipeline.py
(+164 files in other folders)
