[build-system]
requires = ["setuptools>=63", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "colabtool"
version = "0.1.0"
description = "Tool für Colab"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "requests",
  "feedparser",
  "xlsxwriter"
]

[tool.setuptools.packages.find]
where = ["src"]

