[build-system]
requires = ["setuptools>=63", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "colabtool"
version = "0.1.1"
description = "Tool für Colab"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "pandas",
  "requests",
  "feedparser",
  "xlsxwriter",
  "openpyxl",
  "nbformat"
]

[tool.setuptools.packages.find]
where = ["src"]
